--- a/ex002/index.html
+++ b/ex002/index.html
@@ -13,6 +13,26 @@
         Você pode escrever um parágrafo de qualquer forma<br>
         basta colocar tudo no meio de tags p e /p.
     </p>
-    
+    <hr>
+    <p>Se precisar quebrar o texto em algum lugar especifico <br>
+        como esse, voce pode usar a tag &lt;br&gt;</p> <!-- LESS THAN / GREATHER TAN (MENOR QUE / MAIOR QUE)-->
+    <hr>
+    <P>Vamos adicionar alguns símbolos especiais:
+        &reg;
+        &COPY;
+        &trade;
+        &euro;
+        &pound;
+        &yen;
+        &cent;
+        &Delta;
+        &uarr;
+    </P> 
+    <hr>
+    <p>Vamos adicionar alguns emoji:
+        &#x1F480;
+        &#x1F916;
+
+    </p>
 </body>
 </html>
