--- a/ex007/index.html
+++ b/ex007/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formatação de textos</title>
+    <style>
+        mark{
+            background-color: greenyellow;
+        }
+    </style>
 </head>
 <body>
     <h1>Principais Formatações</h1>
@@ -19,5 +24,24 @@
     <h2> Italico/Enfase</h2>
     <p>Nessa frase temos um <i>texto em italico</i> usando a tag I (nao semantica).</p>
     <p>Nesta frase, temos um <em>termo em enfase</em> usando a tag EM(semantica)</p>
+
+    <h2> Texto Marcado</h2>
+    <p>Podemos criar tambem um <mark>texto marcado</mark> usando a tag Mark</p>
+    <p>E no outro paragrafo, temos um <mark>outro texto marcado</mark> no final.</p>
+
+    <p>Estamos criando um <big>texto grande</big> e um <small>texto pequeno</small></p>
+
+    <h2>Texto deletado</h2>
+    <p>Podemos marcar um texto como <del>excluido</del> para indicar que ele dever ser lido, mas nao considerado</p>
+
+    <h2>Texto inserido</h2>
+    <p>Podemos marcar um <ins>texto como inserido</ins> para dar uma enfase e indicar que ele foi adicionado depois.</p>
+    <p>Existe também o <u>sublinhado</u> com a tag U (não semantica)</p>
+
+    <h2>Texto sobrescrito</h2>
+    <p>Para inserir coisa do tipo x<sup>20</sup>+3</p>
+    
+    <h2>Texto Subscrito</h2>
+    <p>Para inserir coisas do tipo H<sub>2</sub>O</p>
 </body>
 </html>
