--- a/modulo_3/ex003/tabela5.html
+++ b/modulo_3/ex003/tabela5.html
@@ -12,12 +12,14 @@
         table{
             width: 700px;
             height: 200px;
-            text-align: center;
+            text-align: left;
             border-collapse: collapse;
         }
 
+
         td{
-            border: 1px solid black
+            border: 1px solid black;
+            padding: 4px;
         }
     </style>
 </head>
