--- a/modulo_4/ex002/iframe2.html
+++ b/modulo_4/ex002/iframe2.html
@@ -24,14 +24,14 @@
 
         <ul>
             <li><a href="paginas_extras/pagina001.html" target="frame">Primeira pagina</a></li>
-            <li><a href="paginas_extras/pagina002.html">Segunda pagina</a></li>
-            <li><a href="paginas_extras/pagina003.html">Terceira pagina</a></li>
+            <li><a href="paginas_extras/pagina002.html" target="frame">Segunda pagina</a></li>
+            <li><a href="paginas_extras/pagina003.html" target="frame">Terceira pagina</a></li>
         </ul>
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi consequuntur deleniti ullam similique officia. 
         Enim et unde quaerat placeat neque!</p>
 
-        <iframe src="" frameborder="0" name="frame">
+        <iframe srcdoc="<h1>Escolha uma das opçoes acima</h1> <img src='https://www.shutterstock.com/image-vector/pixel-art-8bit-computer-keyboard-600w-542626096.jpg'>" frameborder="0" name="frame">
             <p>Infelizmente seu navegador não é compativel com isso.</p>
         </iframe>
 
