--- a/modulo_4/ex003/index.html
+++ b/modulo_4/ex003/index.html
@@ -14,10 +14,13 @@
 </head>
 <body>
     <h1>Meu primeiro formulario</h1>
-    <form action="">
+    <form action="cadastro.php" autocomplete="off">
 
-        <p>Nome: <input type="text" name="nome" id="sobrenome"></p>
-        <p> Sobrenome <input type="text" name="sobrenome" id="sobrenome"></p>
+        <p><label for="inome">Nome:</label>
+           <input type="text" name="nome" id="inome"></p>
+        <p> 
+           <label for="isobrenome">Sobrenome</label>
+           <input type="text" name="sobrenome" id="isobrenome"></p>
         <p><input type="submit" value="Enviar"></p>
     
     </form>
