--- a/modulo_4/ex003/form001.html
+++ b/modulo_4/ex003/form001.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Teste de formulario</h1>
-    <form action="cadastro.php" method="post" autocomplete="off" >
+    <form action="cadastro.php" method="post" autocomplete="on" >
 
         <p>
             <label for="iusu">usuario: </label>
@@ -16,11 +16,11 @@
 
         <p>
             <label for="isenha">senha: </label>
-            <input type="password" name="senha" id="isenha" required minlength="5" maxlength="30" size="10" placeholder="nome do usuario">
+            <input type="password" name="senha" id="isenha" required minlength="5" maxlength="30" size="10" placeholder="nome do usuario" autocomplete="username">
         </p>
 
         <p>
-            <input type="submit" name="botao" id="botao" value="enviar" required minlength="8" maxlength="20" size="10" placeholder="senha do usuario">
+            <input type="submit" name="botao" id="botao" value="enviar" required minlength="8" maxlength="20" size="10" placeholder="senha do usuario" autocomplete="current-password">
             <input type="reset" value="limpar">
         </p>
     </form>
