--- a/modulo_4/ex004/mq005/index.html
+++ b/modulo_4/ex004/mq005/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 <body>
     <header>
-        <menu>
-            <h1>Meu site</h1>
+        <h1>Meu site</h1>
+        <span id="burguer" class="material-symbols-outlined" onclick="cliquemenu()">
+            menu
+            </span>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Desenvolvimento Web</a></li>
                 <li><a href="#">Engenharia de Software</a></li>
@@ -80,5 +84,12 @@
                 nobis nemo laboriosam doloremque quam unde beatae?</p>
         </article>
     </main>
+    <script>
+        function cliquemenu(){
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            } else {itens.style.display = 'block'}
+        }
+    </script>
 </body>
 </html>
