--- a/modulo_4/ex004/mq005/index.html
+++ b/modulo_4/ex004/mq005/index.html
@@ -6,8 +6,9 @@
     <title>Media Query</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1>Meu site</h1>
         <span id="burguer" class="material-symbols-outlined" onclick="cliquemenu()">
@@ -85,6 +86,13 @@
         </article>
     </main>
     <script>
+        function mudouTamanho(){
+            if (window.innerWidth >= 768){
+                itens.style.display = 'inline'
+            }  else{ itens.style.display = 'none'}
+        }
+
+
         function cliquemenu(){
             if (itens.style.display == 'block') {
                 itens.style.display = 'none'
