--- a/modulo_5/exercicio02/flex008/index.html
+++ b/modulo_5/exercicio02/flex008/index.html
@@ -7,7 +7,7 @@
     <style>
         div.conteiner{
             height: 400px;
-            align-items: center;
+            align-items: flex-start;
             background-color: lightsalmon;
             display: flex;
             flex-flow: row nowrap;
@@ -21,7 +21,7 @@
         }
 
         div#i1{
-        
+            
         }
 
         div#i2{
