--- a/modulo_5/exercicio02/flex012/index.html
+++ b/modulo_5/exercicio02/flex012/index.html
@@ -16,22 +16,18 @@
             background-color: lightskyblue;
             border: 1px solid black;
             text-align: center;
-            flex-basis: 200px;
         }
 
         div#caixaA{
-            flex-shrink: 0;
-            flex-grow: 1;
+            flex: 1 0 200px;
         }
 
         div#caixaB{
-            flex-shrink: 1;
-            flex-grow: 2;
+            flex: 1 1 150px
         }
 
         div#caixaC{
-            flex-shrink: 1;
-            flex-grow: 4;
+            flex: 1 8 auto;
         }
 
     </style>
